<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.ui.ValidateEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primary"
            android:paddingHorizontal="24dp"
            android:paddingTop="36dp"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.Material3.HeadlineLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/email_verification"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/closeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_close"
                    app:tint="@color/secondary" />
            </LinearLayout>


            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/validate_email_description"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/verification_steps_text"
                android:textColor="@color/contrastTextColor" />

            <com.stefan.universe.common.views.CountdownButton
                android:id="@+id/resendEmailButton"
                style="@style/Button.Active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/resend_email" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>